--- a/Amigos Quiz/Amigos Quiz.vcxproj.filters
+++ b/Amigos Quiz/Amigos Quiz.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="EventForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="QuizQuestions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoginForm.h">
@@ -33,6 +39,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EventForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Quiz.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AccountSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
