Add isNameValid function

--- a/Amigos Quiz/Amigos Quiz.vcxproj
+++ b/Amigos Quiz/Amigos Quiz.vcxproj
@@ -126,7 +126,7 @@
     <ClCompile Include="LoginForm.cpp" />
     <ClCompile Include="QuizQuestions.cpp" />
     <ClCompile Include="Register.cpp" />
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="AccountSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccountSystem.h" />
