--- a/Amigos Quiz/Amigos Quiz.vcxproj.filters
+++ b/Amigos Quiz/Amigos Quiz.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="QuizQuestions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="AccountSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
