--- a/Amigos Quiz/Amigos Quiz.vcxproj.filters
+++ b/Amigos Quiz/Amigos Quiz.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="AccountSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Lesson.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoginForm.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AccountSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lesson.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
