Add questions and counters

--- a/Amigos Quiz/Amigos Quiz.vcxproj.filters
+++ b/Amigos Quiz/Amigos Quiz.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="Admin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="QuizQuestion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
