--- a/Amigos Quiz/Amigos Quiz.vcxproj
+++ b/Amigos Quiz/Amigos Quiz.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="LoginForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="QuizQuestion.h" />
     <ClInclude Include="Register.h">
       <FileType>CppForm</FileType>
     </ClInclude>
